--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World, my name is Adolfo</h1>
- <p>Billybobjojojr and the advetures of Billybobjojojr<p>
+ <p>Billybobjojojr and the advetures of Billybobjojojr</p>
 </body>
 </html>
