--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a href="Slice of Pi">Slice of Pi</a></li>
-    <li><a href="Robotics">Robotics</a></li>
+    <li><a href="Slice of Pi.html">Slice of Pi</a></li>
+    <li><a href="Robotics.html">Robotics</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
 </ul>
 
