--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Adolfo Reyes Site</title>
+    <img src="Mc donalds.jpg"> 
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Adolfo Reyes">
 
