--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="page-header">
   <font color="Blue"> <h2>My Projects  </font></h2>
 </div>
-<img src="Mc donalds.jpg">
+
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
@@ -68,9 +68,9 @@
   </div>
 </div>
 <div class="page-header">
-  <font color="Blue"> <h2>My Resume  </font></h2>
+  <font color="Blue"> <h2>Memes  </font></h2>
 </div>
-
+<img src="Mc donalds.jpg">
       </div>
       <hr>
       <footer>
