--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <font color="Blue"> <h2>Memes  </font></h2>
 </div>
 <img src="Mc donalds.jpg">
+ <img src="Dogo.PNG">
       </div>
       <hr>
       <footer>
