--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 <img src="Mc donalds.jpg">
  <img src="Dogo.PNG">
-     <img stc="Kirbo.jpg">
+     <img src="Kirbo.jpg">
       </div>
       <hr>
       <footer>
