--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <img src="Mc donalds.jpg">
  <img src="Dogo.PNG">
      <img src="Kirbo.jpg">
+        <img src="Kurbnos.jpg">
       </div>
       <hr>
       <footer>
