--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
 <div class="page-header">
   <font color="Blue"> <h2>Memes  </font></h2>
 </div>
+        <p>Mc Monkey</p>
 <img src="Mc donalds.jpg">
+        <p>DOGO</p>
  <img src="Dogo.PNG">
+        <p>Kirbo the grateful</p>
      <img src="Kirbo.jpg">
-        <img src="Kurbnos.jpg">
       </div>
       <hr>
       <footer>
