--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
  <img src="Dogo.PNG">
         <p>Kirbo the grateful</p>
      <img src="Kirbo.jpg">
+        <p>God of light</p>
+        <img src="God of light.jpg">
       </div>
       <hr>
       <footer>
