--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <ul>
     <li><a href="Slice of Pi.html">Slice of Pi</a></li>
-    <li><a href="jessereyescv.html">Jesse's Website</a></li>
+    <li><a href="https://jessereyescv.github.io">Jesse's Website</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
 </ul>
 
