--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<body style="background-color:Gray;">
+<body style="background-color:sand;">
       </body>
 <html lang="en">
   <head>
@@ -62,7 +62,7 @@
 
 <ul>
     <li><a href="Slice of Pi.html">Slice of Pi</a></li>
-    <li><a href="https://jessereyescv.github.io">Website</a></li>
+    <li><a href="https://jessereyescv.github.io">Jesse'sWebsite</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
 </ul>
 
