--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a href="Slice of Pi.html">Slice of Pi</a></li>
+    <li><a href="https://SliceofPi.html">Slice of Pi</a></li>
     <li><a href="https://jessereyescv.github.io">Jesse'sWebsite</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
 </ul>
