--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p> Welcome to my webpage. My name is Adolfo Reyes and I'm a student of Ms. Wood a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> See me if you want to talk about or see Horror games or films, Playing video Games whith me, or just general life stuff. </p>
 <div class="page-header">
-  <font color="Blue"> <h2>My Projects  </font></h2>
+  <font color="Blue"> <h2>Projects  </font></h2>
 </div>
 
 <p>Here are a few projects that I am proud of.</p>
