--- a/SliceofPi.html
+++ b/SliceofPi.html
@@ -55,6 +55,6 @@
     <p> Welcome to my webpage. My name is Adolfo Reyes and I participated in Slice of Pi when I was in 9th grade. <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> What me and my team did in Slice of Pi did is to see if a atonomus robot is better than a robot controlled robot and so we built a town and created robots to see if they will not crash into buildings. </p>
 <div class="page-header">
-  <font color="Blue"> <h2>My Projects  </font></h2>
+  <font color="Blue"> <h2>Pictures  </font></h2>
 </div>
 
