--- a/SliceofPi.html
+++ b/SliceofPi.html
@@ -57,4 +57,7 @@
 <div class="page-header">
   <font color="Blue"> <h2>Pictures  </font></h2>
 </div>
+        <p> Bryan was also part of the team but did not come out of the picture</p>
+        <p>Picture of town and team</p>
+<img src=".jpg">
 
