--- a/SliceofPi.html
+++ b/SliceofPi.html
@@ -59,5 +59,5 @@
 </div>
         <p> Bryan was also part of the team but did not come out of the picture</p>
         <p>Picture of town and team</p>
-<img src=".jpg">
+<img src="Capture.PNG">
 
