--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my webpage. My name is Adolfo Reyes and I'm a student of Ms. Wood a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> See me if you want to talk about or see Horror games or films, Playing video Games whith me, or just general life stuff. </p>
+    <p> Facts: See me if you want to talk about or see Horror games or films, Playing video Games with me, or we hangout and have fun, and we can talk about life in general and I also like to play volleyball or tennis or frisbe if you want to play. </p>
 <div class="page-header">
   <font color="Blue"> <h2>Projects  </font></h2>
 </div>
