--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<body style="background-color:yellow;">
+<body style="background-color:black;">
       </body>
 <html lang="en">
   <head>
