--- a/summative.html
+++ b/summative.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Adolfo Reyes Site</title>
+    <title>Adolfo Reyes Summative</title>
 
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Adolfo Reyes">
@@ -52,6 +52,5 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is Adolfo Reyes and I'm a student of Ms. Wood a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> Facts: See me if you want to talk about or see Horror games or films, Playing video Games with me, or we hangout and have fun, and we can talk about life in general and I also like to play volleyball or tennis or frisbe if you want to play. </p>
+    <p> This is my computer science summative page</a>.</p>
 <div class="page-header">
