--- a/summative.html
+++ b/summative.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<body style="background-color:Green;">
+<body style="background-color:Lime;">
       </body>
 <html lang="en">
   <head>
@@ -54,3 +54,7 @@
   <div class="span12">
     <p> This is my computer science summative page</a>.</p>
 <div class="page-header">
+
+      
+       <p>Snow picture for Summative </p>
+<img src="Dank Snow Man.jpg">
